fix: add missing padding to .feature .content

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -234,6 +234,10 @@ header .mobile {
   background-color: white;
 }
 
+.feature .content {
+  padding: 2.5rem 0;
+}
+
 .feature .image-container {
   width: 90%;
   height: 65%;
